--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "asbuild:untouched": "asc assembly/index.ts --target debug",
     "asbuild:optimized": "asc assembly/index.ts --target release",
-    "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
+    "asbuild": "yarn run asbuild:untouched && yarn run asbuild:optimized",
     "test": "node tests",
-    "watch:asbuild": "nodemon --watch assembly -e ts -x \"npm run asbuild\"",
+    "watch:asbuild": "nodemon --watch assembly -e ts -x \"yarn run asbuild\"",
     "http": "http-server -o"
   },
   "dependencies": {
