--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "chip8-wasm",
   "version": "0.0.1",
-  "description": "CHIP-8 emulator with AssemblyScript and WebAssembly",
+  "description": "CHIP-8 virtual machine written in C++ with WebAssembly",
   "repository": "https://github.com/digitsensitive/chip8-wasm.git",
   "author": "digitsensitive <digit.sensitivee@gmail.com>",
   "license": "MIT",
-  "private": true,
+  "main": "index.js",
+  "bugs": {
+    "url": "https://github.com/digitsensitive/chip8-wasm/issues"
+  },
   "scripts": {
-    "asbuild:untouched": "asc assembly/index.ts --target debug",
-    "asbuild:optimized": "asc assembly/index.ts --target release",
-    "asbuild": "yarn run asbuild:untouched && yarn run asbuild:optimized",
-    "test": "node tests",
-    "watch:asbuild": "nodemon --watch assembly -e ts -x \"yarn run asbuild\"",
+    "build": "make",
     "http": "http-server -o"
   },
-  "dependencies": {
-    "@assemblyscript/loader": "0.19.20"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "assemblyscript": "0.19.20",
-    "nodemon": "2.0.15",
     "http-server": "14.0.0"
   }
 }
