--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/sdl2"]
 	path = vendor/sdl2
 	url = git://github.com/SDL-mirror/SDL
+[submodule "vendor/emscripten"]
+	path = vendor/emscripten
+	url = git://github.com/emscripten-core/emscripten
