--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,28 @@
     "type_traits": "cpp",
     "typeinfo": "cpp",
     "unordered_map": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "__sso_allocator": "cpp",
+    "__std_stream": "cpp",
+    "__tree": "cpp",
+    "any": "cpp",
+    "cfenv": "cpp",
+    "charconv": "cpp",
+    "clocale": "cpp",
+    "codecvt": "cpp",
+    "future": "cpp",
+    "map": "cpp",
+    "queue": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "shared_mutex": "cpp",
+    "strstream": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp",
+    "variant": "cpp",
+    "__bits": "cpp",
+    "barrier": "cpp",
+    "concepts": "cpp",
+    "*.ipp": "cpp"
   }
 }
