--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ add_executable(${PROJECT_NAME}
   src/chip8.cpp
   src/virtual-machine.cpp
   src/renderer.cpp
-  src/disassembler.cpp)
+  src/disassembler.cpp
+  src/random.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE 
   include
