--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "http-server": "14.1.0"
+    "http-server": "14.1.0",
+    "prettier": "2.5.1"
   }
 }
