--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/sdl2"]
 	path = vendor/sdl2
 	url = git://github.com/SDL-mirror/SDL
+[submodule "vendor/sdl_ttf"]
+	path = vendor/sdl_ttf
+	url = git://github.com/libsdl-org/SDL_ttf
